# GD_AI_Intro_for_Engineering

./: .gitignore  Dockerfile.backend  Dockerfile.data-generation-backend  Dockerfile.data-generation-frontend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: pyproject.toml
backend/config/: config.yaml
backend/src/: base.py  endpoints.py  lifespan.py  logging_config.py
backend/src/database/: manager.py
backend/src/generation_engine/: embeddings.py  few_shot_data.py  guardrails.py  models.py  pipeline.py  prompts.py
backend/src/generation_engine/flows/: chat_agent.py  data_editing.py  data_generation.py  nlq.py
backend/src/sessions/: manager.py
backend/src/utils/: file_processing.py  observability.py
data_generation_backend/: .env.example  pyproject.toml
data_generation_backend/config/: __init__.py
data_generation_backend/src/: base.py  dependencies.py  endpoints.py  lifespan.py  main.py
data_generation_backend/src/database/: manager.py
data_generation_backend/src/generation_engine/: base.py  common.py  pipeline.py  prompts.py
data_generation_backend/src/generation_engine/flows/: chat_agent.py  data_editing.py  data_generation.py
data_generation_backend/src/sessions/: manager.py
data_generation_backend/src/utils/: file_processing.py  observability.py
data_generation_frontend/: pyproject.toml
data_generation_frontend/src/: config.py  main.py
data_generation_frontend/src/tabs/: chat.py  data_generation.py
frontend/: pyproject.toml
frontend/src/: main.py  utils.py
frontend/src/ui/: components.py
gcp_creds/: README.md
