[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Synthetic Data Generation and Chat"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
google-cloud-aiplatform = "^1.38.0"
redis = "^5.0.1"
langfuse = "^3.0.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
tabulate = "^0.9.0"
envyaml = "^1.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
