[project]
name = "data-generation-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Suponin",email = "573611078@mfrm.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "google-cloud-aiplatform (>=1.123.0,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
